--- a/index.html
+++ b/index.html
@@ -123,10 +123,7 @@
 <footer>
     <div class="alert" style="background-color:#ddd;" role="alert">
         <hr>
-        <p class="mb-0 text-center">Developed by; <a href="https://bolajiayodeji.github.io" target="_blank">Bolaji
-                Ayodeji</a></p>
-        <p class="mb-0 text-center">Source code: <a href="https://github.com/BolajiAyodeji/day-of-birth-finder" target="_blank">Github</a>
-            || <a href="https://codepen.io/iambolajiayo/pen/XxPGjo" target="_blank">Codepen</a></p>
+        //TODO: Add footer
     </div>
 </footer>
 
