--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <footer>
     <div class="alert" style="background-color:#ddd;" role="alert">
         <hr>
-        //TODO: Add footer
+        <!--TODO: Add footer-->
     </div>
 </footer>
 
