--- a/index.html
+++ b/index.html
@@ -119,6 +119,18 @@
         </div>
     </div>
 
+    <script>
+        if ('serviceWorker' in navigator) {
+          window.addEventListener('load', () => {
+            navigator.serviceWorker.register('/service-worker.js')
+                .then((reg) => {
+                  console.log('Service worker registered.', reg);
+                });
+          });
+        }
+    </script>
+
+    <script src="js/app.js"></script>
 
 <footer>
     <div class="alert" style="background-color:#ddd;" role="alert">
@@ -126,8 +138,6 @@
         <!--TODO: Add footer-->
     </div>
 </footer>
-
-<script src="js/app.js"></script>
 
 
 </body>
