added apple-touch-icon for PWA optimization

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
     <!--logo-->
     <link rel="shortcut icon" href="img/icons/icon-96x96.png">
+
+    <link rel="apple-touch-icon" href="icon-192x192.png">
 </head>
 
 <body>
