--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   <!--test-->
 
   <!-- Twitter Card-->
-  <meta name="twitter:title" content="Day of Birth Finder">
-  <meta name="twitter:site" content="dob-finder.firebaseapp.com" />
-  <meta name="twitter:creator" content="@iambolajiayo" />
-  <meta name="twitter:description" content="This script checks your Date of Birth and detects the Day of the Week you were born.">
+  <meta name="twitter:title" content="The Cloud Context">
+  <meta name="twitter:site" content="thecloudcontext.firebaseapp.com" />
+  <meta name="twitter:creator" content="@kangareww" />
+  <meta name="twitter:description" content="A serverless cloud computing blog">
   <meta name="twitter:image" content="img/icons/icon-96x96.png">
   <meta name="twitter:card" content="img/icons/icon-96x96.png">
-  <meta name="description" content="This script checks your Date of Birth and detects the Day of the Week you were born.">
+  <meta name="description" content="A serverless cloud computing blog">
   <!--Open Graph-->
   <meta property="og:image" content="img/icons/icon-96x96.png">
-  <meta property="og:title" content="Day of Birth Finder" />
-  <meta name="author" content="Bolaji Ayodeji">
-  <meta property="og:description" content="This script checks your Date of Birth and detects the Day of the Week you were born." />
-  <meta name="author" content="Bolaji Ayodeji">
-  <meta property="og:url" content="dob-finder.firebaseapp.com" />
-  <meta property="og:site_name" content="Day of Birth Finder" />
-  <meta property="og:type" content="Day of Birth Finder" />
+  <meta property="og:title" content="The Cloud Context" />
+  <meta name="author" content="Andrew">
+  <meta property="og:description" content="A serverless cloud computing blog" />
+  <meta name="author" content="Andrew">
+  <meta property="og:url" content="thecloudcontext.firebaseapp.com" />
+  <meta property="og:site_name" content="The Cloud Context" />
+  <meta property="og:type" content="The Cloud Context" />
 
   <!-- theme-color -->
   <meta name="theme-color" content="#fff" />
@@ -35,11 +35,11 @@
   <script type='application/ld+json'>
       {
           "@context": "http://www.schema.org",
-          "@type": "Day of Birth Finder",
-          "name": "Day of Birth Finder",
-          "url": "dob-finder.firebaseapp.com",
-          "logo": "dob-finder.firebaseapp.com/img/icons/icon-96x96.png",
-          "description": "This script checks your Date of Birth and detects the Day of the Week you were born."
+          "@type": "The Cloud Context",
+          "name": "The Cloud Context",
+          "url": "thecloudcontext.firebaseapp.com",
+          "logo": "thecloudcontext.firebaseapp.com/img/icons/icon-96x96.png",
+          "description": "A serverless cloud computing blog"
       }
   </script>
   <link rel="stylesheet" href="./style.css">
@@ -57,7 +57,7 @@
       <a id="post-view-all">A Serverless Blog</a>
     </div>
     <div class="site-subtitle">
-      All the code that powers this blog is right here.
+      All things cloud computing.
     </div>
     <a id="sign-in-button" class="button sign-in-button">
     <svg width="24" height="24" viewBox="0 0 24 24">
