--- a/index.html
+++ b/index.html
@@ -2492,7 +2492,7 @@
                     <div class="MuiDrawer-root-30 MuiDrawer-docked-31">
                         <div class="MuiPaper-root-42 MuiPaper-elevation0-44 MuiDrawer-paper-32 MuiDrawer-paperAnchorLeft-33 MuiDrawer-paperAnchorDockedLeft-37" style="width:256px">
                             <ul class="MuiList-root-69">
-                                <li class="MuiListItem-root-73 jss25 jss23 jss24 MuiListItem-gutters-80">Paperbase</li>
+                                <li class="MuiListItem-root-73 jss25 jss23 jss24 MuiListItem-gutters-80">The Cloud Context</li>
                                 <li class="MuiListItem-root-73 jss23 jss24 MuiListItem-gutters-80">
                                     <div class="MuiListItemIcon-root-84 jss28">
                                         <svg class="MuiSvgIcon-root-86" focusable="false" viewBox="0 0 24 24" aria-hidden="true" role="presentation">
@@ -2500,12 +2500,12 @@
                                         </svg>
                                     </div>
                                     <div class="MuiListItemText-root-95">
-                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Project Overview</span>
+                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Home Page</span>
                                     </div>
                                 </li>
                                 <li class="MuiListItem-root-73 jss21 MuiListItem-gutters-80">
                                     <div class="MuiListItemText-root-95">
-                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss22 MuiTypography-body1-103">Develop</span>
+                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss22 MuiTypography-body1-103">Main Features</span>
                                     </div>
                                 </li>
                                 <div class="MuiButtonBase-root-131 MuiListItem-root-73 jss23 jss26 MuiListItem-gutters-80 MuiListItem-button-81" tabindex="0" role="button" aria-disabled="false">
@@ -2515,7 +2515,7 @@
                                         </svg>
                                     </div>
                                     <div class="MuiListItemText-root-95">
-                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Authentication</span>
+                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Articles</span>
                                     </div>
                                 </div>
                                 <div class="MuiButtonBase-root-131 MuiListItem-root-73 jss23 MuiListItem-gutters-80 MuiListItem-button-81" tabindex="0" role="button" aria-disabled="false">
@@ -2525,7 +2525,7 @@
                                         </svg>
                                     </div>
                                     <div class="MuiListItemText-root-95">
-                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Database</span>
+                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Resources</span>
                                     </div>
                                 </div>
                                 <div class="MuiButtonBase-root-131 MuiListItem-root-73 jss23 MuiListItem-gutters-80 MuiListItem-button-81" tabindex="0" role="button" aria-disabled="false">
@@ -2536,7 +2536,7 @@
                                         </svg>
                                     </div>
                                     <div class="MuiListItemText-root-95">
-                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Storage</span>
+                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Tools</span>
                                     </div>
                                 </div>
                                 <div class="MuiButtonBase-root-131 MuiListItem-root-73 jss23 MuiListItem-gutters-80 MuiListItem-button-81" tabindex="0" role="button" aria-disabled="false">
@@ -2546,7 +2546,7 @@
                                         </svg>
                                     </div>
                                     <div class="MuiListItemText-root-95">
-                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Hosting</span>
+                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Tests</span>
                                     </div>
                                 </div>
                                 <div class="MuiButtonBase-root-131 MuiListItem-root-73 jss23 MuiListItem-gutters-80 MuiListItem-button-81" tabindex="0" role="button" aria-disabled="false">
@@ -2556,46 +2556,15 @@
                                         </svg>
                                     </div>
                                     <div class="MuiListItemText-root-95">
-                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Functions</span>
-                                    </div>
-                                </div>
-                                <div class="MuiButtonBase-root-131 MuiListItem-root-73 jss23 MuiListItem-gutters-80 MuiListItem-button-81" tabindex="0" role="button" aria-disabled="false">
-                                    <div class="MuiListItemIcon-root-84 jss28">
-                                        <svg class="MuiSvgIcon-root-86" focusable="false" viewBox="0 0 24 24" aria-hidden="true" role="presentation">
-                                            <path d="M5 2c0-.55-.45-1-1-1s-1 .45-1 1v4H1v6h6V6H5V2zm4 14c0 1.3.84 2.4 2 2.82V23h2v-4.18c1.16-.41 2-1.51 2-2.82v-2H9v2zm-8 0c0 1.3.84 2.4 2 2.82V23h2v-4.18C6.16 18.4 7 17.3 7 16v-2H1v2zM21 6V2c0-.55-.45-1-1-1s-1 .45-1 1v4h-2v6h6V6h-2zm-8-4c0-.55-.45-1-1-1s-1 .45-1 1v4H9v6h6V6h-2V2zm4 14c0 1.3.84 2.4 2 2.82V23h2v-4.18c1.16-.41 2-1.51 2-2.82v-2h-6v2z"></path>
-                                        </svg>
-                                    </div>
-                                    <div class="MuiListItemText-root-95">
-                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">ML Kit</span>
+                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Discussions</span>
                                     </div>
                                 </div>
                                 <hr class="MuiDivider-root-134 jss29"/>
                                 <li class="MuiListItem-root-73 jss21 MuiListItem-gutters-80">
                                     <div class="MuiListItemText-root-95">
-                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss22 MuiTypography-body1-103">Quality</span>
+                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss22 MuiTypography-body1-103">Settings</span>
                                     </div>
                                 </li>
-                                <div class="MuiButtonBase-root-131 MuiListItem-root-73 jss23 MuiListItem-gutters-80 MuiListItem-button-81" tabindex="0" role="button" aria-disabled="false">
-                                    <div class="MuiListItemIcon-root-84 jss28">
-                                        <svg class="MuiSvgIcon-root-86" focusable="false" viewBox="0 0 24 24" aria-hidden="true" role="presentation">
-                                            <path transform="scale(1.2, 1.2)" fill="none" d="M0 0h20v20H0V0z"></path>
-                                            <path transform="scale(1.2, 1.2)" d="M15.95 10.78c.03-.25.05-.51.05-.78s-.02-.53-.06-.78l1.69-1.32c.15-.12.19-.34.1-.51l-1.6-2.77c-.1-.18-.31-.24-.49-.18l-1.99.8c-.42-.32-.86-.58-1.35-.78L12 2.34c-.03-.2-.2-.34-.4-.34H8.4c-.2 0-.36.14-.39.34l-.3 2.12c-.49.2-.94.47-1.35.78l-1.99-.8c-.18-.07-.39 0-.49.18l-1.6 2.77c-.1.18-.06.39.1.51l1.69 1.32c-.04.25-.07.52-.07.78s.02.53.06.78L2.37 12.1c-.15.12-.19.34-.1.51l1.6 2.77c.1.18.31.24.49.18l1.99-.8c.42.32.86.58 1.35.78l.3 2.12c.04.2.2.34.4.34h3.2c.2 0 .37-.14.39-.34l.3-2.12c.49-.2.94-.47 1.35-.78l1.99.8c.18.07.39 0 .49-.18l1.6-2.77c.1-.18.06-.39-.1-.51l-1.67-1.32zM10 13c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"></path>
-                                        </svg>
-                                    </div>
-                                    <div class="MuiListItemText-root-95">
-                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Analytics</span>
-                                    </div>
-                                </div>
-                                <div class="MuiButtonBase-root-131 MuiListItem-root-73 jss23 MuiListItem-gutters-80 MuiListItem-button-81" tabindex="0" role="button" aria-disabled="false">
-                                    <div class="MuiListItemIcon-root-84 jss28">
-                                        <svg class="MuiSvgIcon-root-86" focusable="false" viewBox="0 0 24 24" aria-hidden="true" role="presentation">
-                                            <path d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"></path>
-                                        </svg>
-                                    </div>
-                                    <div class="MuiListItemText-root-95">
-                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Performance</span>
-                                    </div>
-                                </div>
                                 <div class="MuiButtonBase-root-131 MuiListItem-root-73 jss23 MuiListItem-gutters-80 MuiListItem-button-81" tabindex="0" role="button" aria-disabled="false">
                                     <div class="MuiListItemIcon-root-84 jss28">
                                         <svg class="MuiSvgIcon-root-86" focusable="false" viewBox="0 0 24 24" aria-hidden="true" role="presentation">
@@ -2603,7 +2572,7 @@
                                         </svg>
                                     </div>
                                     <div class="MuiListItemText-root-95">
-                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Test Lab</span>
+                                        <span class="MuiTypography-root-101 MuiListItemText-primary-99 jss27 MuiTypography-body1-103">Profile</span>
                                     </div>
                                 </div>
                                 <hr class="MuiDivider-root-134 jss29"/>
@@ -2645,11 +2614,11 @@
                     <div class="MuiToolbar-root-154 MuiToolbar-regular-156 MuiToolbar-gutters-155">
                         <div class="MuiGrid-root-158 MuiGrid-container-159 MuiGrid-spacing-xs-1-181 MuiGrid-align-items-xs-center-167">
                             <div class="MuiGrid-root-158 MuiGrid-item-160 MuiGrid-grid-xs-true-192">
-                                <h1 class="MuiTypography-root-101 MuiTypography-h5-110 MuiTypography-colorInherit-123">Authentication</h1>
+                                <h1 class="MuiTypography-root-101 MuiTypography-h5-110 MuiTypography-colorInherit-123">Articles</h1>
                             </div>
                             <div class="MuiGrid-root-158 MuiGrid-item-160">
                                 <button class="MuiButtonBase-root-131 MuiButton-root-290 MuiButton-outlined-295 jss144 MuiButton-colorInherit-303 MuiButton-outlinedSizeSmall-306 MuiButton-sizeSmall-310" tabindex="0" type="button">
-                                    <span class="MuiButton-label-291">Web setup</span>
+                                    <span class="MuiButton-label-291">Language</span>
                                 </button>
                             </div>
                             <div class="MuiGrid-root-158 MuiGrid-item-160">
@@ -2668,18 +2637,15 @@
                     <div class="MuiTabs-root-318">
                         <div class="MuiTabs-scroller-323 MuiTabs-fixed-324" style="overflow:hidden">
                             <div class="MuiTabs-flexContainer-320" role="tablist">
-                                <button class="MuiButtonBase-root-131 MuiTab-root-329 MuiTab-textColorInherit-331 Mui-selected" tabindex="0" type="button" role="tab" aria-selected="true">
-                                    <span class="MuiTab-wrapper-338">Users</span>
+                                <button class="MuiButtonBase-root-131 MuiTab-root-329 MuiTab-textColorInherit-335 Mui-selected" tabindex="0" type="button" role="tab" aria-selected="true">
+                                    <span class="MuiTab-wrapper-338">Apprentice</span>
                                     <span class="jss339 jss341 MuiTabs-indicator-328"></span>
                                 </button>
                                 <button class="MuiButtonBase-root-131 MuiTab-root-329 MuiTab-textColorInherit-331" tabindex="0" type="button" role="tab" aria-selected="false">
-                                    <span class="MuiTab-wrapper-338">Sign-in method</span>
+                                    <span class="MuiTab-wrapper-338">Engineer</span>
                                 </button>
                                 <button class="MuiButtonBase-root-131 MuiTab-root-329 MuiTab-textColorInherit-331" tabindex="0" type="button" role="tab" aria-selected="false">
-                                    <span class="MuiTab-wrapper-338">Templates</span>
-                                </button>
-                                <button class="MuiButtonBase-root-131 MuiTab-root-329 MuiTab-textColorInherit-331" tabindex="0" type="button" role="tab" aria-selected="false">
-                                    <span class="MuiTab-wrapper-338">Usage</span>
+                                    <span class="MuiTab-wrapper-338">Architect</span>
                                 </button>
                             </div>
                         </div>
