--- a/index.html
+++ b/index.html
@@ -2661,19 +2661,19 @@
                                             <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
                                         </svg>
                                     </div>
-                                    <div class="MuiGrid-root-158 MuiGrid-item-160 MuiGrid-grid-xs-true-192">
+                                    <!-- <div class="MuiGrid-root-158 MuiGrid-item-160 MuiGrid-grid-xs-true-192">
                                         <div class="MuiFormControl-root-350 MuiTextField-root-349 MuiFormControl-fullWidth-353">
                                             <div class="MuiInputBase-root-367 MuiInput-root-354 jss345 MuiInputBase-fullWidth-377 MuiInput-fullWidth-362 MuiInputBase-formControl-368 MuiInput-formControl-355">
                                                 <input type="text" aria-invalid="false" placeholder="Search by email address, phone number, or user UID" class="MuiInputBase-input-378 MuiInput-input-363"/>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </header>
-                        <div class="jss348">
+                        <!-- <div class="jss348">
                             <p class="MuiTypography-root-101 MuiTypography-body1-103 MuiTypography-colorTextSecondary-127 MuiTypography-alignCenter-117">No users for this project yet</p>
-                        </div>
+                        </div> -->
                     </div>
                 </main>
                 <footer class="jss5">
