--- a/index.html
+++ b/index.html
@@ -2484,6 +2484,25 @@
 </head>
 
 <body>
+
+  <header class="site-header">
+    <div class="site-title">
+      <a id="post-view-all"></a>
+    </div>
+    <div class="site-subtitle">
+    </div>
+    <a id="sign-in-button" class="button sign-in-button">
+    <svg width="0" height="0" viewBox="0 0 24 24">
+      <path d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z"></path>
+    </svg>
+  </a>
+    <a id="new-post-button" class="button sign-in-button" style="display:none">
+    <svg width="24" height="24" viewBox="0 0 24 24">
+  <path d="M20.71,4.04C21.1,3.65 21.1,3 20.71,2.63L18.37,0.29C18,-0.1 17.35,-0.1 16.96,0.29L15,2.25L18.75,6M17.75,7L14,3.25L4,13.25V17H7.75L17.75,7Z"></path>
+</svg>
+  </a>
+  </header>
+
   <body>
     <div id="__next">
         <div class="jss1">
@@ -2602,7 +2621,7 @@
                                 <button class="MuiButtonBase-root-131 MuiIconButton-root-275 jss142 MuiIconButton-colorInherit-278" tabindex="0" type="button">
                                     <span class="MuiIconButton-label-283">
                                         <div class="MuiAvatar-root-284 MuiAvatar-circle-286">
-                                            <img alt="My Avatar" src="/static/images/avatar/1.jpg" class="MuiAvatar-img-289"/>
+                                            <img alt="My Avatar" src="../img/logo.png" class="MuiAvatar-img-289"/>
                                         </div>
                                     </span>
                                 </button>
@@ -2676,6 +2695,34 @@
                         </div> -->
                     </div>
                 </main>
+
+                <main class="site-wrap">
+
+                  <section id="new-post" class="article-form" style="display: none;">
+                    <h2>New Post</h2>
+                    <form id="message-form" action="#">
+                      <h4><label for="new-post-title">Title</label></h4>
+                      <input type="text" id="new-post-title">
+                      <br />
+                      <br />
+                      <h4><label for="new-post-message">Message</label></h6>
+                        <textarea rows="3" id="new-post-content"></textarea>
+                        <br />
+                        <br />
+                        <button type="submit">Add post</button>
+                    </form>
+                  </section>
+
+                  <div id="articles-list">
+                    <div class="articles-container" />
+                  </div>
+
+                  <article id="article-whole" class="article-whole start-hidden">
+                    <div></div>
+                  </article>
+
+                </main>
+
                 <footer class="jss5">
                     <p class="MuiTypography-root-101 MuiTypography-body2-102 MuiTypography-colorTextSecondary-127 MuiTypography-alignCenter-117">
                         Copyright © <a class="MuiTypography-root-101 MuiLink-root-261 MuiLink-underlineHover-263 MuiTypography-colorInherit-123" href="https://material-ui.com/">Your Website</a>
@@ -2688,53 +2735,6 @@
             </div>
         </div>
     </div>
-
-
-  <!-- <header class="site-header">
-    <div class="site-title">
-      <a id="post-view-all">A Serverless Blog</a>
-    </div>
-    <div class="site-subtitle">
-      All things cloud computing.
-    </div>
-    <a id="sign-in-button" class="button sign-in-button">
-    <svg width="24" height="24" viewBox="0 0 24 24">
-      <path d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z"></path>
-    </svg> Sign In
-  </a>
-    <a id="new-post-button" class="button sign-in-button" style="display:none">
-    <svg width="24" height="24" viewBox="0 0 24 24">
-  <path d="M20.71,4.04C21.1,3.65 21.1,3 20.71,2.63L18.37,0.29C18,-0.1 17.35,-0.1 16.96,0.29L15,2.25L18.75,6M17.75,7L14,3.25L4,13.25V17H7.75L17.75,7Z"></path>
-</svg> New Post
-  </a>
-  </header>
-
-  <main class="site-wrap">
-
-    <section id="new-post" class="article-form" style="display: none;">
-      <h2>New Post</h2>
-      <form id="message-form" action="#">
-        <h4><label for="new-post-title">Title</label></h4>
-        <input type="text" id="new-post-title">
-        <br />
-        <br />
-        <h4><label for="new-post-message">Message</label></h6>
-          <textarea rows="3" id="new-post-content"></textarea>
-          <br />
-          <br />
-          <button type="submit">Add post</button>
-      </form>
-    </section>
-
-    <div id="articles-list">
-      <div class="articles-container" />
-    </div>
-
-    <article id="article-whole" class="article-whole start-hidden">
-      <div></div>
-    </article>
-
-  </main> -->
 
   <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
   <script>
